--- a/package.json
+++ b/package.json
@@ -74,12 +74,15 @@
 		]
 	},
 	"dependencies": {
-		"react-router-dom": "^5.2.0",
+		"@reach/combobox": "^0.18.0",
+		"@react-google-maps/api": "^2.13.1",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-router": "^6.0.2",
+		"react-router-dom": "^5.2.0",
+		"use-places-autocomplete": "^4.0.0"
 	}
 }
