--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"talkjs": "^0.15.5"
 	}
 }
