--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		]
 	},
 	"dependencies": {
+		"axios": "^1.1.3",
 		"moment": "^2.29.4",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
